# hacktor_app

./: .env.template  Dockerfile  app.py  docker-compose.yml  gradio_app.py  pyproject.toml  start_uat.sh
hacktor_app/: hacktor.py
hacktor_app/threat_model/: openai_analysis.py  openai_prompt_gen.py
